NetBSD Problem Report #48599

From www@NetBSD.org  Sun Feb 16 15:56:42 2014
Return-Path: <www@NetBSD.org>
Received: from mail.netbsd.org (mail.netbsd.org [149.20.53.66])
	(using TLSv1 with cipher DHE-RSA-AES256-SHA (256/256 bits))
	(Client CN "mail.netbsd.org", Issuer "Postmaster NetBSD.org" (verified OK))
	by mollari.NetBSD.org (Postfix) with ESMTPS id D4C91A5673
	for <gnats-bugs@gnats.NetBSD.org>; Sun, 16 Feb 2014 15:56:41 +0000 (UTC)
Message-Id: <20140216155640.9F5BEA64B7@mollari.NetBSD.org>
Date: Sun, 16 Feb 2014 15:56:40 +0000 (UTC)
From: segabor@gmail.com
Reply-To: segabor@gmail.com
To: gnats-bugs@NetBSD.org
Subject: NetBSD crashes when switched over virtual terminal with F10 on Atari TT
X-Send-Pr-Version: www-1.0

>Number:         48599
>Category:       port-atari
>Synopsis:       NetBSD crashes when switched over virtual terminal with F10 on Atari TT
>Confidential:   no
>Severity:       serious
>Priority:       medium
>Responsible:    tsutsui
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Sun Feb 16 16:00:00 +0000 2014
>Closed-Date:    Fri Feb 21 16:22:31 +0000 2014
>Last-Modified:  Fri Feb 21 16:22:31 +0000 2014
>Originator:     Gabor Sebestyen
>Release:        NetBSD 6.1.3
>Organization:
>Environment:
NetBSD teetime 6.1.3 NetBSD 6.1.3 (ATARITT) atari
>Description:
I installed a fresh copy of NetBSD 6.1.3 to my Atari TT030. Vanilla ATARITT kernel is used.
The machine has 4 MB ST + 16 MB TT RAM, no additional cards or mods.

Currently two virtual terminals, ttye0 and ttye1 is enabled, they can be accessed by pressing Alt + F1 or Alt + F2.
But when I try to switch over an unconfigured virtual terminal, BSD crashes with "panic: MMU fault" then reboots after generating core dump.

>How-To-Repeat:
It is easy to repeat. Just press Alt+F10 or a higher function key which is known to jump over a undefined vt.

>Fix:

>Release-Note:

>Audit-Trail:

Responsible-Changed-From-To: port-atari-maintainer->tsutsui
Responsible-Changed-By: tsutsui@NetBSD.org
Responsible-Changed-When: Mon, 17 Feb 2014 13:35:32 +0000
Responsible-Changed-Why:
I'll check this one.


State-Changed-From-To: open->analyzed
State-Changed-By: tsutsui@NetBSD.org
State-Changed-When: Mon, 17 Feb 2014 13:35:32 +0000
State-Changed-Why:
Apparently sys/arch/atari/dev/ite.c:ite_switch() should check sc isn't NULL.


From: Izumi Tsutsui <tsutsui@ceres.dti.ne.jp>
To: gnats-bugs@NetBSD.org
Cc: tsutsui@ceres.dti.ne.jp
Subject: Re: port-atari/48599: NetBSD crashes when switched over virtual terminal
	 with F10 on Atari TT
Date: Wed, 19 Feb 2014 00:18:11 +0900

 Could you try the following patched kernel?
 ftp://ftp.netbsd.org/pub/NetBSD/arch/atari/6.1.3_PR48599/

 Index: sys/arch/atari/dev/ite.c
 ===================================================================
 RCS file: /cvsroot/src/sys/arch/atari/dev/ite.c,v
 retrieving revision 1.71
 diff -u -p -d -r1.71 ite.c
 --- sys/arch/atari/dev/ite.c	5 Jun 2011 16:25:12 -0000	1.71
 +++ sys/arch/atari/dev/ite.c	18 Feb 2014 14:28:45 -0000
 @@ -665,8 +665,8 @@ ite_switch(int unit)
  	struct ite_softc	*sc;
  	extern const struct cdevsw view_cdevsw;

 -	sc = getitesp(unit);
 -	if ((sc->flags & (ITE_ATTACHED | ITE_INITED)) == 0)
 +	sc = device_lookup_private(&ite_cd, unit);
 +	if (sc == NULL || (sc->flags & (ITE_ATTACHED | ITE_INITED)) == 0)
  		return;

  	/*

From: =?ISO-8859-1?Q?G=E1bor_Sebesty=E9n?= <segabor@gmail.com>
To: gnats-bugs@netbsd.org
Cc: tsutsui@netbsd.org, gnats-admin@netbsd.org, netbsd-bugs@netbsd.org
Subject: Re: port-atari/48599: NetBSD crashes when switched over virtual
 terminal with F10 on Atari TT
Date: Tue, 18 Feb 2014 21:39:01 +0100

 --20cf307cffd626ee4b04f2b443cb
 Content-Type: text/plain; charset=ISO-8859-1

 Perfect! It just works!
 I ran through all F keys and BSD survived my aggressive action.
 Thank you!

 Gabor


 On Tue, Feb 18, 2014 at 4:20 PM, Izumi Tsutsui <tsutsui@ceres.dti.ne.jp>wrote:

 > The following reply was made to PR port-atari/48599; it has been noted by
 > GNATS.
 >
 > From: Izumi Tsutsui <tsutsui@ceres.dti.ne.jp>
 > To: gnats-bugs@NetBSD.org
 > Cc: tsutsui@ceres.dti.ne.jp
 > Subject: Re: port-atari/48599: NetBSD crashes when switched over virtual
 > terminal
 >          with F10 on Atari TT
 > Date: Wed, 19 Feb 2014 00:18:11 +0900
 >
 >  Could you try the following patched kernel?
 >  ftp://ftp.netbsd.org/pub/NetBSD/arch/atari/6.1.3_PR48599/
 >
 >  Index: sys/arch/atari/dev/ite.c
 >  ===================================================================
 >  RCS file: /cvsroot/src/sys/arch/atari/dev/ite.c,v
 >  retrieving revision 1.71
 >  diff -u -p -d -r1.71 ite.c
 >  --- sys/arch/atari/dev/ite.c   5 Jun 2011 16:25:12 -0000       1.71
 >  +++ sys/arch/atari/dev/ite.c   18 Feb 2014 14:28:45 -0000
 >  @@ -665,8 +665,8 @@ ite_switch(int unit)
 >         struct ite_softc        *sc;
 >         extern const struct cdevsw view_cdevsw;
 >
 >  -      sc = getitesp(unit);
 >  -      if ((sc->flags & (ITE_ATTACHED | ITE_INITED)) == 0)
 >  +      sc = device_lookup_private(&ite_cd, unit);
 >  +      if (sc == NULL || (sc->flags & (ITE_ATTACHED | ITE_INITED)) == 0)
 >                 return;
 >
 >         /*
 >
 >

 --20cf307cffd626ee4b04f2b443cb
 Content-Type: text/html; charset=ISO-8859-1
 Content-Transfer-Encoding: quoted-printable

 <div dir=3D"ltr"><div>Perfect! It just works!</div><div>I ran through all F=
  keys and BSD survived my aggressive action.</div><div>Thank you!</div><div=
 ><br></div><div>Gabor</div></div><div class=3D"gmail_extra"><br><br><div cl=
 ass=3D"gmail_quote">
 On Tue, Feb 18, 2014 at 4:20 PM, Izumi Tsutsui <span dir=3D"ltr">&lt;<a hre=
 f=3D"mailto:tsutsui@ceres.dti.ne.jp" target=3D"_blank">tsutsui@ceres.dti.ne=
 .jp</a>&gt;</span> wrote:<br><blockquote class=3D"gmail_quote" style=3D"mar=
 gin:0 0 0 .8ex;border-left:1px #ccc solid;padding-left:1ex">
 The following reply was made to PR port-atari/48599; it has been noted by G=
 NATS.<br>
 <br>
 From: Izumi Tsutsui &lt;<a href=3D"mailto:tsutsui@ceres.dti.ne.jp">tsutsui@=
 ceres.dti.ne.jp</a>&gt;<br>
 To: gnats-bugs@NetBSD.org<br>
 Cc: <a href=3D"mailto:tsutsui@ceres.dti.ne.jp">tsutsui@ceres.dti.ne.jp</a><=
 br>
 Subject: Re: port-atari/48599: NetBSD crashes when switched over virtual te=
 rminal<br>
 <div class=3D"">=A0 =A0 =A0 =A0 =A0with F10 on Atari TT<br>
 </div>Date: Wed, 19 Feb 2014 00:18:11 +0900<br>
 <br>
 =A0Could you try the following patched kernel?<br>
 =A0<a href=3D"ftp://ftp.netbsd.org/pub/NetBSD/arch/atari/6.1.3_PR48599/" ta=
 rget=3D"_blank">ftp://ftp.netbsd.org/pub/NetBSD/arch/atari/6.1.3_PR48599/</=
 a><br>
 <br>
 =A0Index: sys/arch/atari/dev/ite.c<br>
 =A0=3D=3D=3D=3D=3D=3D=3D=3D=3D=3D=3D=3D=3D=3D=3D=3D=3D=3D=3D=3D=3D=3D=3D=3D=
 =3D=3D=3D=3D=3D=3D=3D=3D=3D=3D=3D=3D=3D=3D=3D=3D=3D=3D=3D=3D=3D=3D=3D=3D=3D=
 =3D=3D=3D=3D=3D=3D=3D=3D=3D=3D=3D=3D=3D=3D=3D=3D=3D=3D<br>
 =A0RCS file: /cvsroot/src/sys/arch/atari/dev/ite.c,v<br>
 =A0retrieving revision 1.71<br>
 =A0diff -u -p -d -r1.71 ite.c<br>
 =A0--- sys/arch/atari/dev/ite.c =A0 5 Jun 2011 16:25:12 -0000 =A0 =A0 =A0 1=
 .71<br>
 =A0+++ sys/arch/atari/dev/ite.c =A0 18 Feb 2014 14:28:45 -0000<br>
 =A0@@ -665,8 +665,8 @@ ite_switch(int unit)<br>
 =A0 =A0 =A0 =A0 struct ite_softc =A0 =A0 =A0 =A0*sc;<br>
 =A0 =A0 =A0 =A0 extern const struct cdevsw view_cdevsw;<br>
 <br>
 =A0- =A0 =A0 =A0sc =3D getitesp(unit);<br>
 =A0- =A0 =A0 =A0if ((sc-&gt;flags &amp; (ITE_ATTACHED | ITE_INITED)) =3D=3D=
  0)<br>
 =A0+ =A0 =A0 =A0sc =3D device_lookup_private(&amp;ite_cd, unit);<br>
 =A0+ =A0 =A0 =A0if (sc =3D=3D NULL || (sc-&gt;flags &amp; (ITE_ATTACHED | I=
 TE_INITED)) =3D=3D 0)<br>
 =A0 =A0 =A0 =A0 =A0 =A0 =A0 =A0 return;<br>
 <br>
 =A0 =A0 =A0 =A0 /*<br>
 <br>
 </blockquote></div><br></div>

 --20cf307cffd626ee4b04f2b443cb--

From: "Izumi Tsutsui" <tsutsui@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/48599 CVS commit: src/sys/arch/atari/dev
Date: Wed, 19 Feb 2014 11:40:31 +0000

 Module Name:	src
 Committed By:	tsutsui
 Date:		Wed Feb 19 11:40:31 UTC 2014

 Modified Files:
 	src/sys/arch/atari/dev: ite.c

 Log Message:
 Fix kernel crash when a user tries to switch to nonexistent terminal.

 Reported by Gabor Sebestyen in PR port-atari/48599.

 Should be pulled up to all netbsd-6 branches.


 To generate a diff of this commit:
 cvs rdiff -u -r1.71 -r1.72 src/sys/arch/atari/dev/ite.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: analyzed->pending-pullups
State-Changed-By: tsutsui@NetBSD.org
State-Changed-When: Fri, 21 Feb 2014 10:54:17 +0000
State-Changed-Why:
pullup-6 #1033


From: "Stephen Borrill" <sborrill@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/48599 CVS commit: [netbsd-6] src/sys/arch/atari/dev
Date: Fri, 21 Feb 2014 12:00:23 +0000

 Module Name:	src
 Committed By:	sborrill
 Date:		Fri Feb 21 12:00:23 UTC 2014

 Modified Files:
 	src/sys/arch/atari/dev [netbsd-6]: ite.c

 Log Message:
 Pull up the following revisions(s) (requested by tsutsui in ticket #1033):
 	sys/arch/atari/dev/ite.c:	revision 1.72

 Fix kernel crash when a user tries to switch to nonexistent terminal.
 Fixes PR/48599.


 To generate a diff of this commit:
 cvs rdiff -u -r1.71 -r1.71.8.1 src/sys/arch/atari/dev/ite.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

From: "Stephen Borrill" <sborrill@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/48599 CVS commit: [netbsd-6-0] src/sys/arch/atari/dev
Date: Fri, 21 Feb 2014 12:27:28 +0000

 Module Name:	src
 Committed By:	sborrill
 Date:		Fri Feb 21 12:27:28 UTC 2014

 Modified Files:
 	src/sys/arch/atari/dev [netbsd-6-0]: ite.c

 Log Message:
 Pull up the following revisions(s) (requested by tsutsui in ticket #1033):
 	sys/arch/atari/dev/ite.c:	revision 1.72

 Fix kernel crash when a user tries to switch to nonexistent terminal.
 Fixes PR/48599.


 To generate a diff of this commit:
 cvs rdiff -u -r1.71 -r1.71.14.1 src/sys/arch/atari/dev/ite.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

From: "Stephen Borrill" <sborrill@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/48599 CVS commit: [netbsd-6-1] src/sys/arch/atari/dev
Date: Fri, 21 Feb 2014 13:21:45 +0000

 Module Name:	src
 Committed By:	sborrill
 Date:		Fri Feb 21 13:21:45 UTC 2014

 Modified Files:
 	src/sys/arch/atari/dev [netbsd-6-1]: ite.c

 Log Message:
 Pull up the following revisions(s) (requested by tsutsui in ticket #1033):
 	sys/arch/atari/dev/ite.c:	revision 1.72

 Fix kernel crash when a user tries to switch to nonexistent terminal.
 Fixes PR/48599.


 To generate a diff of this commit:
 cvs rdiff -u -r1.71 -r1.71.22.1 src/sys/arch/atari/dev/ite.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: pending-pullups->closed
State-Changed-By: tsutsui@NetBSD.org
State-Changed-When: Fri, 21 Feb 2014 16:22:31 +0000
State-Changed-Why:
pullup done.


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.51 2026/08/10 02:28:17 riastradh Exp $
$NetBSD: gnats_config.sh,v 1.10 2026/05/13 22:00:09 riastradh Exp $
Copyright © 1994-2026 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.